--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "enmap": "^0.4.2",
     "enmap-level": "^1.0.0",
     "htmlparser2": "^3.9.2",
-    "querystring": "^0.2.0",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {},
   "scripts": {
