--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
   "name": "yui",
-  "version": "0.0.1",
+  "version": "0.1",
   "description": "A discord.js bot",
   "main": "bot.js",
   "dependencies": {
-    "async": "^2.5.0",
     "discord.js": "^11.2.1",
     "enmap": "^0.4.2",
     "enmap-level": "^1.0.0",
-    "htmlparser2": "^3.9.2",
-    "querystring": "^0.2.0",
+    "jimp": "^0.2.28",
+    "snekfetch": "^3.5.8"
+  },
+  "engines": {
+    "node": ">=8"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
   "repository": {
     "type": "git",
     "url": "github.com/blogboywill/Yui"
   },
+  "bugs": {
+    "url": "https://github.com/blogboywill/Yui/issues"
+  },
+  "homepage": "https://github.com/blogboywill/Yui#readme",
   "author": "willikesgames",
   "license": "ISC"
 }
