--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "yui",
-  "version": "0.1",
+  "version": "Beta 1.0",
   "description": "A discord.js bot",
   "main": "bot.js",
   "dependencies": {
     "discord.js": "^11.2.1",
     "enmap": "^0.4.2",
     "enmap-level": "^1.0.0",
-
     "jimp": "^0.2.28",
     "random-js": "^1.0.8",
     "snekfetch": "^3.5.8"
