--- a/package.json
+++ b/package.json
@@ -1,22 +1,42 @@
 {
   "name": "yui",
-  "version": "Beta 1.0",
+  "version": "1.0",
   "description": "A discord.js bot",
   "main": "bot.js",
   "dependencies": {
-    "canvas": "^1.6.7",
+    "@types/node": "^10.0.8",
+    "async": "^2.6.0",
+    "canvas": "^1.6.10",
     "canvas-constructor": "^0.3.0",
-    "discord.js": "^11.2.1",
-    "enmap": "^0.4.2",
-    "enmap-level": "^1.0.0",
+    "common-tags": "^1.7.2",
+    "dbl-api": "^1.2.1",
+    "dblapi.js": "^1.2.1",
+    "discord-bot-list": "^1.0.1",
+    "discord.js": "^11.3.2",
+    "enmap": "^0.4.6",
+    "enmap-level": "^1.0.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "hjson": "^3.1.1",
     "jimp": "^0.2.28",
+    "node-trello": "^1.3.0",
     "random-js": "^1.0.8",
-    "snekfetch": "^3.5.8"
+    "restler": "^3.4.0",
+    "snekfetch": "^3.6.4",
+    "winston": "^3.0.0-rc5"
   },
   "engines": {
     "node": ">=8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-node": "^5.2.1"
+  },
   "scripts": {
     "start": "node bot.js"
   },
